--- a/HBlink/hblink.cfg
+++ b/HBlink/hblink.cfg
@@ -81,14 +81,14 @@ EXPORT_PORT: 1234
 # Port should be the port you want this master to listen on. It must be unique
 # and unused by anything else.
 # Repeat - if True, the master repeats traffic to clients, False, it does nothing.
-[EA3ES]
+[XXXX]
 MODE: MASTER
 ENABLED: True
 REPEAT: True
 EXPORT_AMBE: False
-IP: 94.177.213.246
+IP: X.x.x.x ip servidor
 PORT: 54000
-PASSPHRASE: ADER
+PASSPHRASE: PONER PASSWORD
 GROUP_HANGTIME: 5
 
 # CLIENT INSTANCES - DUPLICATE SECTION FOR MULTIPLE CLIENTS
@@ -107,11 +107,11 @@ LOOSE: False
 EXPORT_AMBE: False
 IP: 
 PORT: 5400
-MASTER_IP: 94.177.213.246
+MASTER_IP: X.x.x.x ip servidor
 MASTER_PORT: 54015
-PASSPHRASE: ADER
-CALLSIGN: EA3ES
-RADIO_ID: 2143048
+PASSPHRASE: XXXX PONER PASSWORD
+CALLSIGN: EAXXXX
+RADIO_ID: 214XXXX
 RX_FREQ: 449000000
 TX_FREQ: 444000000
 TX_POWER: 25
