CAMBIO IP E INDICATIVO

--- a/HBlink/hblink.cfg
+++ b/HBlink/hblink.cfg
@@ -81,14 +81,14 @@ EXPORT_PORT: 1234
 # Port should be the port you want this master to listen on. It must be unique
 # and unused by anything else.
 # Repeat - if True, the master repeats traffic to clients, False, it does nothing.
-[EA3ES]
+[EA3EIZ]
 MODE: MASTER
 ENABLED: True
 REPEAT: True
 EXPORT_AMBE: False
-IP: 94.177.213.246
+IP: XX.XX.XX.XX
 PORT: 54000
-PASSPHRASE: ADER
+PASSPHRASE: PASSWORD
 GROUP_HANGTIME: 5
 
 # CLIENT INSTANCES - DUPLICATE SECTION FOR MULTIPLE CLIENTS
@@ -107,11 +107,11 @@ LOOSE: False
 EXPORT_AMBE: False
 IP: 
 PORT: 5400
-MASTER_IP: 94.177.213.246
+MASTER_IP: XX.XX.XX.XX
 MASTER_PORT: 54015
 PASSPHRASE: ADER
-CALLSIGN: EA3ES
-RADIO_ID: 2143048
+CALLSIGN: EA3EIZ
+RADIO_ID: 214XXXXX
 RX_FREQ: 449000000
 TX_FREQ: 444000000
 TX_POWER: 25
