--- a/HBlink/loro.cfg
+++ b/HBlink/loro.cfg
@@ -86,7 +86,7 @@ MODE: MASTER
 ENABLED: True
 REPEAT: True
 EXPORT_AMBE: False
-IP: 94.177.213.246
+IP: XX.XX.XX.XX
 PORT: 54015
-PASSPHRASE: ADER
+PASSPHRASE: PASSWORD
 GROUP_HANGTIME: 5
